--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
